--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ podman-compose-generated-network/
 
 # Ignore the .git folder and its contents
 .git/
+
+# Ignore .env folders and it's contents
+.venv/
