--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -63,7 +63,7 @@ jobs:
           push: true
           tags: ghcr.io/${{ env.REPO }}:${{ github.sha }}
           file: ./webapp/Dockerfile
-          context: .
+          context: ./webapp
 
   deploy:
     permissions:
